Add Creator Details

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
+  
+  <footer>
+  <p class="footerclass">
+    Made with ❤️ and some code<br/></br>
+    &lt;/&gt; <a href="https://harsh.cf" target="_blank">Harsh Vardhan Singhal</a>
+  </p>
+</footer>
 
 </body>
 
