--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Simon</title>
+  <title>Simon Game</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
+  <h1 id="title">Simon Game</h1>
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
     <div lass="row">
@@ -37,8 +38,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
-  
-  <footer>
+
+<footer>
   <p class="footerclass">
     Made with ❤️ and some code<br/></br>
     &lt;/&gt; <a href="https://harsh.cf" target="_blank">Harsh Vardhan Singhal</a>
