--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Rules/title>
+  <title>Rules</title>
   <link rel="stylesheet" href="styles.css">
  </head>
  <body>
