--- a/rules.html
+++ b/rules.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <title>Rules</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
  </head>
  <body>
   <h1 id="title">Rules for Simon Game</h1>
-  <p>
+  <p id="rules-text">
   1. Press any letter on your keyboard to start the game.
   <br></br>
   2. Remember the color(red, green, blue, yellow) shown and replicate it. You must remember the pattern till the end of the game.
