--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1 id="title">Simon Game</h1>
-  <a href="harshsinghal.me/Simon-Game/rules.html" class="button">Rules</a>
+  <a href="rules.html" class="button">Rules</a>
   <h1 id="level-title">Press Any Key to Start</h1>
   <div class="container">
     <div lass="row">
